--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,12 @@ language: scala
 
 scala:
   - 2.12.3
-   
+
 jdk:
   - oraclejdk8
+
+script:
+  - sbt clean coverage test it:test coverageReport
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
