--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ jdk:
   - oraclejdk8
 
 script:
-  - sbt clean coverage test it:test coverageReport
+  - sbt ++ 2.11.11 clean test it:test
+  - sbt ++ 2.12.3  clean coverage test it:test coverageReport
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
