--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 language: scala
 
 scala:
+  - 2.11.11
   - 2.12.3
 
 jdk:
   - oraclejdk8
 
 script:
-  - sbt ++ 2.11.11 clean test it:test
-  - sbt ++ 2.12.3  clean coverage test it:test coverageReport
+  - sbt ++$TRAVIS_SCALA_VERSION clean coverage test it:test coverageReport
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
